# fetch_ubuntu_info

./: CMakeLists.txt  distro_fetcher.cpp  distro_fetcher.hpp  linux_debug_build_script.sh  main.cpp
.github/workflows/: Linux.yml  Linux_x86_64.yml  MSWindows.yml  macOS.yml  wxGTK_x86_64.yml  wxMSW_x86_32_MSBuild.yml  wxMSW_x86_64_MSBuild.yml  wxOSX_arm64.yml
